--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "yarn add @react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
+    "axios": "^0.26.1",
     "expo": "~44.0.0",
     "expo-image-picker": "~12.0.1",
     "expo-location": "~14.0.1",
